# acflp-backend

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE.md  Makefile  PRODUCTION_READINESS.md  README.md  SECURITY.md  admin_page.html  backward_compatible_api.py  comprehensive_production_deployment_guide.md  create_safe_migration.py  debug_backend_issue.py  debug_jwt.py  debug_nested_access.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  ff.txt  huggingface_sample.jsonl  mkdocs.yml  pyproject.toml  sample_tasks.jsonl  test_api_call.py  test_token.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  fastapi-boilerplate-feature-request.md  fastapi-boilerplate-issue.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  pyproject.toml
backend/app/: admin.py  ee.md  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: f3b4172c07a1_add_task_system.py
backend/app/api/: main.py
backend/app/api/routes/: tasks.py
backend/app/templates/: bulk_import.html  flexible_import.html
coverage/: pytest-results.xml
docs/: index.md
docs/getting-started/: configuration.md  first-run.md  index.md  installation.md
docs/stylesheets/: extra.css
docs/user-guide/: development.md  index.md  production.md  project-structure.md  testing.md
docs/user-guide/admin-panel/: adding-models.md  configuration.md  index.md  user-management.md
docs/user-guide/api/: endpoints.md  exceptions.md  index.md  pagination.md  versioning.md
docs/user-guide/authentication/: google-oauth.md  index.md  jwt-tokens.md  permissions.md  user-management.md
docs/user-guide/background-tasks/: index.md
docs/user-guide/caching/: cache-strategies.md  client-cache.md  index.md  redis-cache.md
docs/user-guide/configuration/: docker-setup.md  environment-specific.md  environment-variables.md  index.md  settings-classes.md
docs/user-guide/database/: crud.md  index.md  migrations.md  models.md  schemas.md
docs/user-guide/rate-limiting/: index.md
frontend/: package-lock.json  package.json
frontend/src/: routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: SidebarItems.tsx
frontend/src/components/Tasks/: BulkUploadModal.tsx  TasksTable.tsx
frontend/src/routes/_layout/: tasks.$taskId.tsx  tasks.tsx
scripts/: coverage_report.py  deploy.sh
src/: .env.caprover.example  .env.example  .env.local
src/app/: main.py
src/app/admin/: initialize.py  tools.py  views.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  health.py  languages.py  login.py  logout.py  oauth.py  rate_limits.py  tasks.py  tasks_api.py  tiers.py  users.py
src/app/core/: config.py  logger.py  logging_config.py  schemas.py  security.py  setup.py
src/app/core/db/: database.py  models.py  token_blacklist.py
src/app/core/exceptions/: http_exceptions.py
src/app/core/utils/: async_utils.py  cache.py  rate_limit.py
src/app/core/worker/: functions.py  settings.py
src/app/crud/: __init__.py  crud_languages.py  crud_tasks.py
src/app/middleware/: client_cache_middleware.py  request_id.py
src/app/models/: __init__.py  language.py  task.py  user.py
src/app/schemas/: __init__.py  language.py  rate_limit.py  task.py  user.py
src/migrations/: env.py
src/migrations/versions/: 77c60bc1491d_add_missing_columns_to_task_model.py  de01e0f3b2a6_drop_spoken_languages_from_user.py  f3a4b0f9e1cd_add_spoken_languages_to_user.py  remove_tier_system_20250121.py
src/scripts/: create_first_superuser.py  create_first_tier.py  migrate_languages_pk.py  rename_language.py  seed_languages.py
tests/: README.md  conftest.py  test_auth.py  test_dependencies.py  test_models.py  test_oauth.py  test_oauth_unit.py  test_rate_limits.py  test_schemas.py  test_security.py  test_tasks.py  test_tasks_queue.py  test_tiers.py  test_user.py  test_users_extended.py
tests/e2e/: test_advanced_patterns.py
tests/helpers/: generators.py  mocks.py
tests/integration/: test_rate_limits.py  test_security_integration.py  test_tasks.py  test_tasks_more.py  test_tiers.py  test_user.py  test_users_more.py
tests/unit/: test_auth.py  test_cache_utils.py  test_coverage_boosters.py  test_dependencies_errors.py  test_logger.py  test_models.py  test_oauth_more.py  test_security_more.py  test_tasks_api.py
